--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -13,7 +13,7 @@ jobs:
           python-version: 3.11.3
 
       - name: Install tools
-        run: python -m pip install --upgrade pip pytest requests pandas sqlalchemy
+        run: python -m pip install --upgrade pip pytest requests pandas sqlalchemy python-dotenv 
 
       - name: Test with unittest
         run: python3 -m unittest proj/testing.py
