--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -16,8 +16,7 @@ jobs:
         run: python -m pip install --upgrade pip pytest requests pandas sqlalchemy python-dotenv 
 
       - name: Let GitHub access key
-        env:
-          YOUTUBE_API_KEY: ${{ secrets.API_KEY }}  
+        run: echo "YOUTUBE_API_KEY=${{ secrets.API_KEY }}" >> $GITHUB_ENV
 
       - name: Test with unittest
         run: python3 -m unittest proj/testing.py
